# ATOMS3R-CAM-UserDemo

./: .clang-format  .gitignore  README.md  fetch_repos.py  flash.sh  merge_firmware.sh  partitions.csv  repos.json  sdkconfig  sdkconfig.old  upload_asset_pool.sh
asset_pool_gen/: .gitignore  CMakeLists.txt  main.cpp
components/ESPAsyncWebServer/src/: AsyncJson.h  WebAuthentication.cpp
components/usb_device_uvc/tusb/: usb_descriptors.c
main/: CMakeLists.txt  Kconfig.projbuild  hal_config.h  usb_webcam_main.cpp
main/service/: service.h  service_uvc.cpp  service_web_server.cpp
main/service/apis/: api_camera.cpp  api_imu.cpp  api_ir.cpp  apis.h
main/utils/assets/: assets.cpp  assets.h
main/utils/assets/images/: images.h  types.h
main/utils/assets/images/rgb565_converter/: rgb565_converter.cpp  rgb565_converter.h
main/utils/bmi270/src/: bmi270.cpp  bmi270.h
main/utils/bmi270/src/utilities/BMI270-Sensor-API/: bmi2.c  bmi2.h  bmi270.c  bmi270.h  bmi270_context.c  bmi270_context.h  bmi270_legacy.c  bmi270_legacy.h  bmi270_maximum_fifo.c  bmi270_maximum_fifo.h  bmi2_defs.h  bmi2_ois.c  bmi2_ois.h
main/utils/bmi270/src/utilities/BMM150-Sensor-API/: bmm150.c  bmm150.h  bmm150_defs.h
main/utils/camera/: camera_init.c  camera_init.h  camera_pin.h
main/utils/ir_nec_transceiver/: ir_nec_encoder.c  ir_nec_encoder.h  ir_nec_transceiver.c  ir_nec_transceiver.h
main/utils/shared/: shared.cpp  shared.h  types.h
